src/css/styles.css
/* Import */
@font-face {
    font-family: CalistogaRegular;
    src: url("../asset/font/calistoga/fonts/Calistoga-Regular.ttf");
}

@font-face {
    font-family: InterTypeface;
    src: url("../asset/font/inter-typeface/variable/Inter.ttf");
}

/* Variables */
:root {
    --background-colour: #4499AA;
}

/* Reset */
* {
    box-sizing: border-box;
}

html, body {
    margin: 0;
    padding: 0;
}

h1, h2, h3, h4, h5, h6 {
    margin: 0;
    padding: 0;
    text-align: center;
}

button, input, select {
    appearance: none;
}

/* General */
html, body {
    font-family: CalistogaRegular;
    font-size: 16px;
    font-style: normal;
    font-weight: normal;
}

h1 {
    font-size: 3rem;
}

h2 {
    font-size: 2.6rem;
}

/* Header */
.header-small {
    padding: 30px 25px;
    background-image: linear-gradient(
        150deg,
        var(--background-colour) 0%,
        var(--background-colour) 35%,
        #CCCCCC 35%,
        white 36%,
        white 100%
    );
}

.header-large {
    display: none;
}

.portrait {
    position: relative;

    margin: 0 auto 60px;
    min-height: 450px;

    background-clip: border-box;
    background-image: url("../asset/image/portfolio-portrait-1.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.portrait-heading {
    position: absolute;
    bottom: 15px;
    margin: 0 auto;
    width: 100%;

    color: white;
    font-weight: 600;
    text-align: center;
    text-shadow: -2px 8px 4px #555555;
}

.about {

}

.about-heading {
    text-align: center;
}

.about-details {
    color: #444444;
    font-family: InterTypeface;
    font-size: 1.2rem;
    line-height: 1.4lh;
}

.icons {
    display: flex;
    justify-content: center;
    gap: 16px;
}

.icons-link {

}

.icons-icon {
    width: 40px;
}

/* Main */
.showcase {
    padding: 80px 25px 160px;
}

.showcase-heading {
    margin: 0 0 20px;

    font-weight: normal;
}

.project {
    margin: 60px 0;

    box-shadow:
            0 2px 4px #CCCCCC,
            0 2px 8px #AAAAAA,
            0 2px 12px #999999;
}

.project-image {
    width: 100%;
    height: 350px;
}

.project-details {
    padding: 20px;
}

.project-heading {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.project-title {
    margin: 20px 5px 5px 0;

    font-size: 5vw;
    font-weight: normal;
    text-align: left;
}

.project-links {
    display: flex;
    gap: 2vw;
}

.project-profile, .project-preview {

}

.project-preview-icon, .project-profile-icon {
    width: 24px;
}

.project-description {
    /* padding: 0 10px; */

    color: #555555;
    font-family: InterTypeface;
    font-size: 1rem;
}

/* Footer */

footer {
    color: white;
    background-color: var(--background-colour);
}

.contact {
    padding: 30px 20px 60px;
    font-style: normal;
}

.contact-heading {
    font-weight: normal;
}

.contact-message {
    margin: 10px 0 0 0;

    font-family: InterTypeface;
    /* font-size: 1.2rem; */
    font-size: 5vw;
}

.contact-address {
    font-family: InterTypeface;
}

.contact-address-house {
    margin: 24px 0;

    /* font-size: 0.8rem; */
    font-size: 4vw;
}

.contact-address-house-line {
    margin: 2px 0;
}

.contact-address-phone, .contact-address-email {
    margin: 2px 0;

    font-family: InterTypeface;
    /* font-size: 0.8rem; */
    font-size: 4vw;
}

.contact-social {
    display: flex;
    justify-content: center;
    gap: 16px;

    margin: 20px 0;
}

.contact-social-link {
    width: 48px;
}

.contact-social-image {

}

.contact-image {
    width: 100%;
    min-height: 650px;
    background-clip: no-clip;
    background-image: url("../asset/image/portfolio-portrait-2.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* Media Queries */
@media screen and (min-width: 600px) {
    /* Header */
    .header-small {
        display: none;
    }

    .header-large {
        display: block;

        padding: 45px 0;

        background-color: var(--background-colour);
        /* background-image: linear-gradient(
            165deg,
            var(--background-colour) 0%,
            var(--background-colour) 60%,
            #CCCCCC 60%,
            white 61%,
            white 100%
        ); */
    }

    .header-large-heading {
        position: relative;
        top: -10px;
        left: 50px;
        z-index: 2;

        color: white;
        font-size: 3rem;
        text-shadow: 2px 2px 10px #444444;
    }

    .header-large-image {
        float: left;

        width: 50vw;
        height: 300px;
    }

    .header-large-container {
        position: relative;

        margin: 0 auto;
        width: 80%;
        padding: 60px 40px 20px;

        background-color: white;
        box-shadow:
                0px 2px 5px #AAAAAA,
                0px 4px 5px #CCCCCC,
                0px 6px 5px #EEEEEE;
    }

    .header-large-container-image {
        position: relative;
        float: left;

        margin: 0;
        width: 250px;
        height: 350px;
        
        transform: translate(-50px, -90px) scale(1.3);
    }

    .header-large-container-heading {
        margin: 20px 0;
        font-size: 2.0rem;
    }

    .header-large-container-message {
        margin: 0;
        padding: 0;

        font-weight: normal !important;
        line-height: 1.3lh;
    }

    /* Main */
    .showcase-heading {
        margin-left: 3vw;

        text-align: left;
    }

    .projects {
        /* display: grid;
        grid-template-columns: 1fr 1fr; */
        display: flex;
        flex-wrap: wrap;
        justify-content: space-around;
        row-gap: 48px;
        column-gap: 24px;
    }

    .project {
        margin: 0;
        width: 40vw;

        transition: transform linear 0.5s;
    }

    .project:hover, .project:focus {
        transform: scale(1.05);
    }

    .project-image {
        width: 100%;
        height: 220px;
    }

    .project-details {

    }

    .project-heading {
        gap: 10px;
    }

    .project-heading {

    }

    .project-title {
        margin: 5px 0;
        font-size: 1rem;
    }

    .project-links {

    }

    .project-description {
        font-size: 0.8rem;
    }

    /* Footer */
    footer {
        /* display: flex;
        justify-content: space-between; */

        display: grid;
        grid-template-columns: 2fr 3fr;

        padding: 70px 20px 70px;
    }

    /* footer > * {
        width: 50%;
    } */

    .contact {

        padding: 60px 20px;
    }

    .contact-heading {
        font-size: 2.2rem;
        text-align: left;
    }

    .contact-message {
        font-size: 1.1rem;
    }

    .contact-address-house {
        font-size: 1.1rem;
    }

    .contact-address-phone, .contact-address-email {
        display: flex;
        align-items: center;
        gap: 12px;
    }

    .contact-address-phone-text,.contact-address-email-text {
        font-size: 1.1rem;
    }

    .contact-address-phone-icon, .contact-address-email-icon {
        width: 32px;
    }

    .contact-social {
        justify-content: flex-start;
    }

    .contact-image {
        min-height: 0px;
    }
}

@media screen and (min-width: 1000px) {

}

@media screen and (min-width: 1400px) {

}

